GET and POST Diagnosis records
